feat: add payment management
